# medSarthi

./: .gitignore  main.py  pyproject.toml  requirements.txt
scratch/: create_admin.py
src/: auth.py  clinic_agent.py  config.py  database.py  dependencies.py  models.py  ocr_service.py  patient_agent.py  rag_manager.py  schemas.py  stt_service.py
src/routers/: admin_router.py  ai_router.py  auth_router.py  doctor_router.py  patient_router.py
src/utils/: email_service.py  humanizer.py
tests/: test_humanizer.py
